<resources>
    <string name="app_name">芝麻街</string>
    
    <string name="str_login_text">登录</string>
    <string name="str_register_text">注册</string>
    <string name="str_no_account_register_text">无账号，点击注册</string>
    <string name="str_user_login_text">用户登录</string>
    <string name="str_user_register_text">用户注册</string>
    <string name="str_forget_password_text">忘记密码</string>
    <string name="str_tel_num_text">手机号码&#058;</string>
    <string name="str_validate_code_text">验&#032;&#032;证&#032;&#032;码&#058;</string>
    <string name="str_get_validate_code_text">获取验证码</string>
    <string name="str_password_text">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码&#058;</string>
    <string name="str_affirm_password_text">确认密码&#058;</string>
    <string name="str_invite_code_text">邀&#032;&#032;请&#032;&#032;码&#058;</string>
    <string name="str_please_invite_code_text">请输入邀请码</string>
    <string name="str_please_tel_text">请输入手机号码</string>
    <string name="str_please_password_text">请输入密码</string>
    <string name="str_please_affirm_password_text">请确认密码</string>
    <string name="str_benefit_text">公益</string>
    <string name="str_benefit_activities_text">公益活动</string>
    <string name="str_shop_text">商城</string>
    <string name="str_goods_classify_text">分类</string>
    <string name="str_shop_cart_text">购物车</string>
    <string name="str_shop_order_text">订单</string>
    <string name="str_my_text">我的</string>
    <string name="str_benefit_details_text">公益详情</string>
    <string name="str_more_text">更多>>></string>
    <string name="str_my_wallet_text">我的钱包</string>
    <string name="str_wallet_text">钱包</string>
    <string name="str_shopping_text">商城</string>
    <string name="str_account_balance_text">账户余额</string>
    <string name="str_actvitities_text">活动</string>
    <string name="str_setting_cash_password_text">设置支付密码</string>
    <string name="str_update_cash_password_text">修改支付密码</string>
    <string name="str_forget_cash_password_text">忘记支付密码</string>
    <string name="str_setting_login_text">修改登录密码</string>
    <string name="str_account_credited_text">收款账户</string>
    <string name="str_binding_account_text">绑定账号</string>
    <string name="str_recharge_wallet_text">充值</string>
    <string name="str_recharge_record_text">充值记录</string>
    <string name="str_withdraw_record_text">提现记录</string>
    <string name="str_consume_record_text">消费记录</string>
    <string name="str_money_record_text">余额记录</string>
    <string name="str_withdraw_text">提现</string>
    <string name="str_trade_record_text">交易记录</string>
    <string name="str_recharge_money_text">充值金额</string>
    <string name="str_please_input_recharge_money_text">请输入充值金额</string>
    <string name="str_integral_text_11">11积分</string>
    <string name="str_integral_text_110">110积分</string>
    <string name="str_integral_text_220">220积分</string>
    <string name="str_integral_text_330">330积分</string>
    <string name="str_integral_text_550">550积分</string>
    <string name="str_integral_text_1100">1100积分</string>
    <string name="str_integral_text_2200">2200积分</string>
    <string name="str_integral_text_6000">6000积分</string>
    <string name="str_money_text_1">充值： 1元</string>
    <string name="str_money_text_10">充值： 10元</string>
    <string name="str_money_text_20">充值： 20元</string>
    <string name="str_money_text_30">充值： 30元</string>
    <string name="str_money_text_50">充值： 50元</string>
    <string name="str_money_text_100">充值： 100元</string>
    <string name="str_money_text_200">充值： 200元</string>
    <string name="str_money_text_500">充值： 500元</string>
    <string name="str_next_text">下一步</string>
    <string name="str_withdraw_to_text">提现到</string>
    <string name="str_withdraw_money_text">提现金额</string>
    <string name="str_please_input_withdraw_money_text">请输入提现金额</string>
    <string name="str_withdraw_money_available_text">可提现金额</string>
    <string name="str_money_text">元</string>
    <string name="str_all_withdraw_text">全部提现</string>
    <string name="str_affirm_withdraw_text">预计2个工作日内到账，确认提现</string>
    <string name="str_my_integral_text">芝麻粒</string>
    <string name="str_all_integral_text">总芝麻粒</string>
    <string name="str_integral_record_text">积分记录</string>
    <string name="str_integral_rule_text">积分规则</string>
    <string name="str_general_text">普通用户</string>
    <string name="str_vip_level_text">VIP会员</string>
    <string name="str_integral_text">芝麻粒</string>
    <string name="str_member_upgrade_text">会员升级</string>
    <string name="str_collect_text">收藏</string>
    <string name="str_input_invite_code_text">输入邀请码</string>
    <string name="str_invite_msg_text">填写好友邀请码</string>
    <string name="str_invite_notice_text">注：邀请码填写之后将不能修改，请小心填写！</string>
    <string name="str_submit_invite_code_text">提交邀请码</string>
    <string name="str_apprentice_text">徒弟</string>
    <string name="str_browsing_history_text">历史</string>
    <string name="str_discuss_text">评论</string>
    <string name="str_message_text">消息</string>
    <string name="str_my_focus_text">我的关注</string>
    <string name="str_discount_text">优惠券</string>
    <string name="str_help_feedback_text">帮助与反馈</string>
    <string name="str_help_text">帮助</string>
    <string name="str_feedback_text">反馈</string>
    <string name="str_member_privileges_text">会员卡特权</string>
    <string name="str_registration_privileges_text">权益保证</string>
    <string name="str_search_text">搜索</string>
    <string name="str_hot_search_text">热门搜索</string>
    <string name="str_search_record_text">搜索记录</string>
    <string name="str_not_data_text">暂无数据!</string>
    <string name="str_clear_search_record_text">清空搜索记录</string>
    <string name="str_search_result_text">搜索结果</string>
    <string name="str_all_tag_text">所有栏目</string>
    <string name="str_about_text">关于</string>
    <string name="str_app_name_text">应用名称：</string>
    <string name="str_app_version_text">应用版本：</string>
    <string name="str_service_text">联系电话：</string>
    <string name="str_setting_account_text">账户设置</string>
    <string name="str_clear_cache_text">清理缓存</string>
    <string name="str_night_pattern_text">夜间模式</string>
    <string name="str_check_update_text">检查更新</string>
    <string name="str_auto_night_pattern_text">自动设置夜间模式</string>
    <string name="str_off_line_text">离线模式</string>
    <string name="str_setting_text">设置</string>
    <string name="str_exit_account_text">退出登录</string>
    <string name="str_account_text">账户</string>
    <string name="str_header_text">头像</string>
    <string name="str_nickname_text">昵称</string>
    <string name="str_birthday_text">生日</string>
    <string name="str_sex_text">性别</string>
    <string name="str_primary_vip_text">普通会员</string>
    <string name="str_intermediate_vip_text">VIP会员</string>
    <string name="str_tourist_text">用户</string>
    <string name="str_vip_text">会员</string>
    <string name="str_registration_desc_text">VIP介绍一位VIP会员后，平台立即奖励500芝麻粒，徒儿百分之十进贡给你</string>
    <string name="str_assure_text_1">1.阅读收益\n2.徒弟阅读收益\n3.自身购物收益</string>
    <string name="str_assure_text_2">4.分享产品收益\n5.团队成长收益\n6.区域知名度最大化</string>
    <string name="str_grade_rules_text">等级特权</string>
    <string name="str_grade_text">等级</string>
    <string name="str_condition_text">条件</string>
    <string name="str_welfare_text">福利</string>
    <string name="str_condition_register_text">成功注册会员</string>
    <string name="str_condition_intermediate_text">成为中级会员</string>
    <string name="str_everyday_text">每天可得20芝麻粒</string>
    <string name="str_everyday_intermediate_text">每天可得50芝麻粒</string>
    <string name="str_sex_boy_text">男</string>
    <string name="str_sex_lady_text">女</string>
    <string name="str_year_text">年</string>
    <string name="str_month_text">月</string>
    <string name="str_day_text">日</string>
    <string name="str_hour_text">时</string>
    <string name="str_minute_text">分</string>
    <string name="str_ok_text">确定</string>
    <string name="str_submit_text">提交</string>
    <string name="str_please_selector_text">请选择</string>
    <string name="str_please_date_text">选择日期</string>
    <string name="str_please_time_text">选择时间</string>
    <string name="str_search_no_data_text">抱歉，没有搜索到相关内容</string>
    <string name="str_balance_available_text">可提现金额为： %1$s 元</string>
    <string name="str_balance_no_text">余额不足</string>
    <string name="str_qrcode_scan_text">二维码识别</string>
    <string name="str_cancel_text">取消</string>
    <string name="str_invite_apprentice_text">师傅邀请会员成为师傅奖励500芝麻粒</string>
    <string name="str_read_apprentice_text">师傅可以获得徒弟收益的10%作为贡品</string>
    <string name="str_wechat_apprentice_text">微信</string>
    <string name="str_qq_apprentice_text">QQ</string>
    <string name="str_wechat_moments_text">朋友圈</string>
    <string name="str_qcode_text">二维码</string>
    <string name="str_validate_account_text">账户验证</string>
    <string name="str_account_info_text">账户信息</string>
    <string name="str_withdraw_password_text">提现密码</string>
    <string name="str_please_input_withdraw_password_text">请输入提现密码</string>
    <string name="str_please_reinput_withdraw_password_text">请确认提现密码</string>
    <string name="str_password_security_level_text">安全等级</string>
    <string name="str_password_level_low_text">低</string>
    <string name="str_password_level_middle_text">中</string>
    <string name="str_password_level_high_text">高</string>
    <string name="str_share_qrcode_text">二维码</string>
    <string name="str_share_text">分享</string>
    <string name="str_account_withdraw_text">提现账户</string>
    <string name="str_account_alipay_text">支付宝账号</string>
    <string name="str_please_account_alipay_text">请输入支付宝账号</string>
    <string name="str_alipay_name_text">支付宝姓名</string>
    <string name="str_must_fill_text">此项必填!</string>
    <string name="str_alipay_text">支付宝</string>
    <string name="str_wechat_text">微信</string>
    <string name="str_alipay_hint_text">如果已经忘记支付宝账号，可通过“登录淘宝官网 www.taobao.com ,然后在走上交-账号-账号管理-走遍支付宝绑定设置-绑定邮箱”查看</string>
    <string name="str_primary_welfare_text">每天可以20条有效阅读\n每条奖励0.5芝麻粒\n平台共赠送10芝麻粒\n 多出无效 \n\n普通用户介绍成为用户\n下级收益的10%\n普通用户介绍成为VIP\n下级收益的10%</string>
    <string name="str_intermediate_welfare_text">每天可以100条有效阅读\n平台共赠送50芝麻粒\n 多出无效 \n\nVIP会员介绍成为普通用户\n下级收益的10%\n平台赠送500芝麻粒\nVIP会员介绍成为VIP会员\n下级收益的10%</string>
    <string name="str_interests_general_text_1">每天可以20条有效阅读\n平台赠送10芝麻粒\n多出无效</string>
    <string name="str_interests_general_text_2">用户介绍成为用户\n下级收益的10%\n初级会员介绍成为VIP会员\n下级收益的10%</string>
    <string name="str_interests_vip_text_1">每天可以100条有效阅读\n平台赠送50芝麻粒\n多出无效\n平台赠送50芝麻粒</string>
    <string name="str_interests_vip_text_2">VIP会员介绍成为用户\n下级收益的10%\nVIP会员介绍成为VIP会员\n下级收益的10%</string>
    <string name="str_alipay_withdraw_hint_text">支付宝提现兑换成功后，将在1-3个工作日(节假日顺延)有客服审核后到账。请耐心等待。兑换时请准确填写支付宝手机或邮箱账号，如因支付宝账户有误导致无法充值费用将原路返回。每笔提现操作需要支付10%的手续费</string>

    <string name="str_member_upgrade_text_1">每天可以20条有效阅读\n共赠送10芝麻粒</string>
    <string name="str_member_upgrade_text_2">每天可以100条有效阅读\n共赠送50芝麻粒</string>
    <string name="str_member_upgrade_text_3">徒弟的10%收益</string>
    <string name="str_member_upgrade_text_4">徒弟的10%收益</string>
    <string name="str_member_upgrade_text_5">账单随时看</string>
    <string name="str_member_upgrade_text_6">账单随时看</string>
    <string name="str_member_upgrade_text_7">无</string>
    <string name="str_member_upgrade_text_8">邀请用户成为VIP\n每次都赠送500芝麻粒</string>
    <string name="str_member_upgrade_text_9">现金红包特权</string>
    <string name="str_member_upgrade_text_10">在线客服</string>
</resources>
