<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_backgroud_color"
    android:orientation="vertical"
    android:id="@+id/ll_layout"
    >

    <include layout="@layout/layout_public_titlebar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding_2"
        android:background="@color/color_white"
        android:layout_margin="@dimen/default_margin_2"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_recharge_money_text"
            android:layout_marginTop="@dimen/default_margin_2"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="￥"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size_1"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/default_margin_4"

                />
            <EditText
                android:id="@+id/et_recharge_money"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:hint="@string/str_please_input_recharge_money_text"
                android:background="@drawable/shape_edit_no_stroke"
                android:paddingLeft="@dimen/default_padding_2"
                android:inputType="number"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height_2"
            android:layout_marginTop="@dimen/default_margin_1"
            >
            <LinearLayout
                android:id="@+id/ll_money_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_11"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_1"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_money_10"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/default_margin_2"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_110"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_10"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_money_20"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/default_margin_2"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_220"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_20"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height_2"
            android:layout_marginTop="@dimen/default_margin_2"
            >
            <LinearLayout
                android:id="@+id/ll_money_30"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_330"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_30"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_money_50"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/default_margin_2"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_550"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_50"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_money_100"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/default_margin_2"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_1100"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_100"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height_2"
            android:layout_marginTop="@dimen/default_margin_2"
            >
            <LinearLayout
                android:id="@+id/ll_money_200"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_2200"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_200"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_money_500"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_recharge_money"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/default_margin_2"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_integral_text_6000"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/default_text_size_4"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_money_text_500"
                    android:textColor="@color/color_blue2"
                    android:textSize="@dimen/default_text_size_3"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/default_margin_2"
                />

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_next"
        style="@style/default_button"
        android:text="@string/str_next_text"
        />
</LinearLayout>
