<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    >
    <include layout="@layout/layout_public_titlebar"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_2"
        android:text="@string/str_invite_msg_text"
        android:gravity="center"
        android:textSize="@dimen/default_text_size_2"
        android:textColor="@color/default_color_gray_1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_2"
        android:text="@string/str_invite_notice_text"
        android:gravity="center"
        android:textSize="@dimen/default_text_size_2"
        android:textColor="@color/red"
        />

    <EditText
        android:id="@+id/et_invite_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_2"
        android:background="@drawable/shape_edit_stroken"
        android:gravity="center"
        android:textSize="@dimen/default_text_size_3"
        android:hint="输入邀请码（向介绍人获取）"
        android:textColorHint="@color/default_color_gray_2"
        android:layout_marginTop="@dimen/default_margin_2"
        android:layout_marginLeft="@dimen/default_height_2"
        android:layout_marginRight="@dimen/default_height_2"
        />

    <TextView
        android:id="@+id/tv_submit_invite"
        style="@style/default_button"
        android:layout_marginLeft="@dimen/default_height_2"
        android:layout_marginRight="@dimen/default_height_2"
        android:layout_marginTop="@dimen/default_height_2"
        android:text="@string/str_submit_invite_code_text"
        />
</LinearLayout>
